--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <h3 class="mb-3">Login</h3>
                 <form id="loginForm">
                     <label>Email:</label>
-                    <input type="email" name="email" class="form-control" required>
+                    <input type="text" name="name" class="form-control" required>
 
                     <label>Password:</label>
                     <input type="password" name="password" class="form-control" required>
